Logging sql result set size - trying to debug SQL memory usage.